--- a/views/404.ejs
+++ b/views/404.ejs
@@ -132,6 +132,6 @@ a::after {
   <h1>Error <span class="errorcode">404</span></h1>
   <p class="output"><%=error %> </p>
 
-  <p class="output">Please try to <button style="background-color:#11581E; border: none; color: #fff; font-size: 20px;"  onclick="history.back()">go back</button> or <a href="/">return to the homepage</a>.</p>
+  <p class="output">Please try to <button style="background-color:#11581E; border: none; color: #fff; font-size: 20px;"  onclick="history.back()">go back</button>.</p>
   <p class="output">Good luck.</p>
 </div>
