--- a/views/user/invoice.ejs
+++ b/views/user/invoice.ejs
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="span4">
         
-            <img src="http://webivorous.com/wp-content/uploads/2020/06/brand-logo-webivorous.png" class="img-rounded logo">
+            <img style="width: 150px;" src="/user/img/logo.png" class="img-rounded logo">
             <address>
                 <strong>FlipShop Pvt. Ltd.</strong>
                 <br>
