--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -42,18 +42,6 @@
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__option">
-            <div class="offcanvas__links">
-                <a href="#">Sign in</a>
-                <a href="#">FAQs</a>
-            </div>
-            <div class="offcanvas__top__hover">
-                <span>Usd <i class="arrow_carrot-down"></i></span>
-                <ul>
-                    <li>USD</li>
-                    <li>EUR</li>
-                    <li>USD</li>
-                </ul>
-            </div>
         </div>
         <div class="offcanvas__nav__option">
             <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
@@ -78,22 +66,6 @@
                             <p>Free shipping, 30-day return or refund guarantee.</p>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-5">
-                        <div class="header__top__right">
-                            <div class="header__top__links">
-                                <a href="#">Sign in</a>
-                                <a href="#">FAQs</a>
-                            </div>
-                            <div class="header__top__hover">
-                                <span>Usd <i class="arrow_carrot-down"></i></span>
-                                <ul>
-                                    <li>USD</li>
-                                    <li>EUR</li>
-                                    <li>USD</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -103,7 +75,7 @@
                     <button class="toggle-button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions"
                     aria-controls="offcanvasWithBothOptions" style="border: none;"><i class="fa-solid fa-bars text-dark"></i></button>
                     <div class="header__logo">
-                        <a href="./index.html"><img src="/user/img/logo.png" alt=""></a>
+                        <a href="/"><img style="width: 200px;" src="/user/img/logo.png" alt=""></a>
                     </div>
         
                 <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
@@ -131,17 +103,6 @@
                         <ul>
                             <li class="active"><a href="/">Home</a></li>
                             <li><a href="/shop">Shop</a></li>
-                            <!-- <li><a href="#">Pages</a>
-                                <ul class="dropdown">
-                                    <li><a href="./about.html">About Us</a></li>
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shopping-cart.html">Shopping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li> -->
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contacts</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -200,28 +161,6 @@
             </div>
         </section>
         <section class="row justify-content-center pb-4" style="margin-top: 7em;">
-            <!-- <div class="col-10 col-md-4">
-                <form id="passwordChange">
-                    <h5 class="mb-5 text-center">change password</h5>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Current Password</label>
-                        <input type="password" class="form-control mt-2 rounded-0" id="exampleInputCurrentPassword1"
-                            aria-describedby="passwordHelp" placeholder="Current password">
-                    </div>
-                    <div class="form-group mt-4">
-                        <label for="exampleInputPassword1">New Password</label>
-                        <input type="password" class="form-control mt-2 rounded-0" id="exampleInputNewPassword1"
-                            placeholder="Password">
-                    </div>
-                    <div class="form-group mt-4">
-                        <label for="exampleInputphone1">Confirm Pasword</label>
-                        <input type="password" class="form-control mt-2 rounded-0" id="exampleInputCPassword1"
-                            placeholder="Confirm Password">
-                    </div>
-                    <button type="submit" class="d-none"></button>
-                </form>
-                <button type="submit" class="btn btn-warning mt-3" onclick="changePassword()">Save</button>
-            </div> -->
         </section>
     </main>
 
