--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -97,24 +97,17 @@
                 <% productList.forEach(function(productList,index){ %> 
                 <div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6 mix new-arrivals">
                     <div class="product__item">
+                        
                         <div class="product__item__pic set-bg" data-setbg="/image/productImages/<%=productList.image[0] %> ">
                             <span class="label">New</span>
                             <ul class="product__hover">
-                                <li><a href="#"><img src="/user/img/icon/heart.png" alt=""></a></li>
-                                <li><a href="#"><img src="/user/img/icon/compare.png" alt=""> <span>Compare</span></a></li>
-                                <li><a href="#"><img src="/user/img/icon/search.png" alt=""></a></li>
+                                <li><a href="/addToWishlist/<%= productList._id %> "><img src="/user/img/icon/heart.png" alt=""></a></li>
+                                <li><a href="/singleView/<%=productList._id%>"> <i style="background-color: white; font-size: 18px; padding: 10px; margin-top: 2000px;" class="bi bi-arrows-move"></i></a></li>
                             </ul>
                         </div>
                         <div class="product__item__text">
                             <h6><%=productList.name %> </h6>
-                            <a href="#" class="add-cart">+ Add To Cart</a>
-                            <!-- <div class="rating">
-                                <i class="fa fa-star-o"></i>
-                                <i class="fa fa-star-o"></i>
-                                <i class="fa fa-star-o"></i>
-                                <i class="fa fa-star-o"></i>
-                                <i class="fa fa-star-o"></i>
-                            </div> -->
+                            <a href="/addToCart/<%= productList._id %> " class="add-cart">+ Add To Cart</a>
                             <h5><%=productList.price %> </h5>
                             <div class="product__color__select">
                                 <label for="pc-1">
@@ -134,128 +127,5 @@
             </div>
         </div> 
     </section>
-    <!-- Product Section End -->
-
-    <!-- Categories Section Begin -->
-    <!-- <section class="categories spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="categories__text">
-                        <h2>Clothings Hot <br /> <span>Shoe Collection</span> <br /> Accessories</h2>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="categories__hot__deal">
-                        <img src="/user/img/product-sale.png" alt="">
-                        <div class="hot__deal__sticker">
-                            <span>Sale Of</span>
-                            <h5>$29.99</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 offset-lg-1">
-                    <div class="categories__deal__countdown">
-                        <span>Deal Of The Week</span>
-                        <h2>Multi-pocket Chest Bag Black</h2>
-                        <div class="categories__deal__countdown__timer" id="countdown">
-                            <div class="cd-item">
-                                <span>3</span>
-                                <p>Days</p>
-                            </div>
-                            <div class="cd-item">
-                                <span>1</span>
-                                <p>Hours</p>
-                            </div>
-                            <div class="cd-item">
-                                <span>50</span>
-                                <p>Minutes</p>
-                            </div>
-                            <div class="cd-item">
-                                <span>18</span>
-                                <p>Seconds</p>
-                            </div>
-                        </div>
-                        <a href="#" class="primary-btn">Shop now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- Categories Section End -->
-
-    <!-- Instagram Section Begin -->
-    <!-- <section class="instagram spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="instagram__pic">
-                        <div class="instagram__pic__item set-bg" data-setbg="/user/img/instagram/instagram-1.jpg"></div>
-                        <div class="instagram__pic__item set-bg" data-setbg="/user/img/instagram/instagram-2.jpg"></div>
-                        <div class="instagram__pic__item set-bg" data-setbg="/user/img/instagram/instagram-3.jpg"></div>
-                        <div class="instagram__pic__item set-bg" data-setbg="/user/img/instagram/instagram-4.jpg"></div>
-                        <div class="instagram__pic__item set-bg" data-setbg="/user/img/instagram/instagram-5.jpg"></div>
-                        <div class="instagram__pic__item set-bg" data-setbg="/user/img/instagram/instagram-6.jpg"></div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="instagram__text">
-                        <h2>Instagram</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.</p>
-                        <h3>#Male_Fashion</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- Instagram Section End -->
-
-    <!-- Latest Blog Section Begin -->
-    <!-- <section class="latest spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <span>Latest News</span>
-                        <h2>Fashion New Trends</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="/user/img/blog/blog-1.jpg"></div>
-                        <div class="blog__item__text">
-                            <span><img src="/user/img/icon/calendar.png" alt=""> 16 February 2020</span>
-                            <h5>What Curling Irons Are The Best Ones</h5>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="/user/img/blog/blog-2.jpg"></div>
-                        <div class="blog__item__text">
-                            <span><img src="/user/img/icon/calendar.png" alt=""> 21 February 2020</span>
-                            <h5>Eternity Bands Do Last Forever</h5>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic set-bg" data-setbg="/user/img/blog/blog-3.jpg"></div>
-                        <div class="blog__item__text">
-                            <span><img src="/user/img/icon/calendar.png" alt=""> 28 February 2020</span>
-                            <h5>The Health Benefits Of Sunglasses</h5>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- Latest Blog Section End -->
 
     <%-include("./layout/user footer.ejs") %> 
