--- a/views/user/orderSuccessPage.ejs
+++ b/views/user/orderSuccessPage.ejs
@@ -25,7 +25,13 @@
 	</div>
 
 	<footer class="site-footer" id="footer">
-		<p class="site-footer__fineprint" id="fineprint">Copyright ©2014 | All Rights Reserved</p>
+		<p>Copyright ©
+			<script>
+				document.write(new Date().getFullYear());
+			</script>
+			All rights reserved | This template is made with <i class="fa fa-heart-o"
+			aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+		</p>
 	</footer>
 </body>
 </html>
