--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -29,8 +29,7 @@
                   <form action="/gnenerateOtp" method="post">
   
                     <div class="d-flex align-items-center mb-3 pb-1">
-                      <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                      <span style="color: black;" class="h1 fw-bold mb-0">Logo</span>
+                      <img style="width: 150px;" src="/user/img/logo.png" class="img-rounded logo">
                     </div>
   
                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign into your account</h5>
