--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -116,7 +116,7 @@
                           <%=adds.pin%>
                         </p>
                         <div class="d-flex justify-content-between">
-                            <a href="#" class="btn btn-warning" data-toggle="modal"
+                            <a  href="#" style="color: white; background-color: rgb(211, 9, 9);" class="btn " data-toggle="modal"
                             data-target="#exampleModalCenter2<%=adds._id%>">
                             Edit Address
                             </a>
@@ -212,13 +212,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                            <a href="#" style="text-decoration: none;" class="text-dark">Set as defualt</a>
+                                    </div>
+                                 </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <% }) %>
+                 </section>
+             <% }) %>
         <% }else{ %>
             <div>
                 
@@ -334,7 +333,7 @@
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="footer__about">
                     <div class="footer__logo">
-                        <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                        <a href="#"><img src="/user/img/footer-logo.png" alt=""></a>
                     </div>
                     <p>The customer is at the heart of our unique business model, which includes design.</p>
                     <a href="#"><img src="img/payment.png" alt=""></a>
@@ -384,7 +383,8 @@
                             document.write(new Date().getFullYear());
                         </script>2020
                         All rights reserved | This template is made with <i class="fa fa-heart-o"
-                        aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/abrar-aboobacker-0a117a21b/" target="_blank">FlipShop</a>
+                    </p>
                     </p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </div>
