--- a/views/user/catProduct.ejs
+++ b/views/user/catProduct.ejs
@@ -34,15 +34,9 @@
                                         <div class="card-body">
                                             <div class="shop__sidebar__categories">
                                                 <ul class="nice-scroll">
-                                                    <li><a href="#">Men (20)</a></li>
-                                                    <li><a href="#">Women (20)</a></li>
-                                                    <li><a href="#">Bags (20)</a></li>
-                                                    <li><a href="#">Clothing (20)</a></li>
-                                                    <li><a href="#">Shoes (20)</a></li>
-                                                    <li><a href="#">Accessories (20)</a></li>
-                                                    <li><a href="#">Kids (20)</a></li>
-                                                    <li><a href="#">Kids (20)</a></li>
-                                                    <li><a href="#">Kids (20)</a></li>
+                                                    <% for(var i = 0 ;i<categories.length;i++){ %>
+                                                        <li><a href="/productShow/<%=categories[i]._id%>"><%=categories[i].name%> </a></li>
+                                                  <%  } %> 
                                                 </ul>
                                             </div>
                                         </div>
