--- a/views/user/layout/user footer.ejs
+++ b/views/user/layout/user footer.ejs
@@ -54,8 +54,8 @@
                             <script>
                                 document.write(new Date().getFullYear());
                             </script>
-                            All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            All rights reserved | <i class="fa fa-heart-o"
+                            aria-hidden="true"></i> by <a href="https://www.linkedin.com/in/abrar-aboobacker-0a117a21b/" target="_blank">FlipShop</a>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
