--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -107,7 +107,6 @@
                     </nav>
                 </div>
             </div>
-            <div class="canvas__open"><i class="fa fa-bars"></i></div>
         </div>
     </header>
     <!-- Header Section End -->
@@ -153,7 +152,7 @@
                             </div>
                             <!-- <button type="submit" class="d-none"></button> -->
                         
-                        <button type="submit" class="btn btn-warning mt-3">Save changes</button>
+                        <button style="color: white; background-color: rgb(211, 9, 9);" type="submit" class="btn btn-warning mt-3">Save changes</button>
                     </form>                                <!-- onclick="submitForm()" -->
                                
                     </div>
@@ -206,7 +205,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
+                            <a href="#"><img src="/user/img/footer-logo.png" alt=""></a>
                         </div>
                         <p>The customer is at the heart of our unique business model, which includes design.</p>
                         <a href="#"><img src="img/payment.png" alt=""></a>
@@ -256,7 +255,8 @@
                                 document.write(new Date().getFullYear());
                             </script>2020
                             All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            aria-hidden="true"></i> by<a href="https://www.linkedin.com/in/abrar-aboobacker-0a117a21b/" target="_blank">FlipShop</a>
+                        </p>
                         </p>
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
