--- a/views/user/catProduct.ejs
+++ b/views/user/catProduct.ejs
@@ -76,9 +76,8 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="/image/productImages/<%=productList.image[0] %> ">
                                     <ul class="product__hover">
-                                        <li><a href="/addToWishlist/<%= productList._id %> "><img src="/user/img/icon/heart.png" alt=""></a></li>
-                                        <li><a href="#"><img src="/user/img/icon/compare.png" alt=""> <span>Compare</span></a> </li>
-                                        <li><a href="#"><img src="/user/img/icon/search.png" alt=""></a></li>
+                                        <li><a href="/addToWishlist/<%= productList._id %> "><i style=" background-color: white; color: black; font-size: 18px; padding: 10px" class="bi bi-heart"></i></a></li>
+                                        <li><a href="/singleView/<%=productList._id%>"> <i style=" background-color: white; color: black; font-size: 18px; padding: 10px; margin-top: 2000px;" class="bi bi-arrows-move"></i> <span>View More</span></a></li>
                                     </ul>
                                 </div>
                                 <div class="product__item__text">
