--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -101,8 +101,8 @@
                         <div class="product__item__pic set-bg" data-setbg="/image/productImages/<%=productList.image[0] %> ">
                             <span class="label">New</span>
                             <ul class="product__hover">
-                                <li><a href="/addToWishlist/<%= productList._id %> "><img src="/user/img/icon/heart.png" alt=""></a></li>
-                                <li><a href="/singleView/<%=productList._id%>"> <i style="background-color: white; font-size: 18px; padding: 10px; margin-top: 2000px;" class="bi bi-arrows-move"></i></a></li>
+                                <li><a href="/addToWishlist/<%= productList._id %> "><i style="background-color: white; color: black; font-size: 18px; padding: 10px; margin-bottom: 20px;" class="bi bi-heart"></i></a></li>
+                                <li><a href="/singleView/<%=productList._id%>"> <i style="background-color: white; color: black;  font-size: 18px; padding: 10px; margin-top: 2000px;" class="bi bi-arrows-move"></i></a></li>
                             </ul>
                         </div>
                         <div class="product__item__text">
